battlegrounds/01-high-throughput-ecommerce/02-infrastructure-deployment/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    name: ecommerce
    environment: prod
    app.kubernetes.io/part-of: ecommerce-platform
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
