battlegrounds/01-high-throughput-ecommerce/02-infrastructure-deployment/k8s/07-ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-alb-ingress
  namespace: ecommerce
  labels:
    app.kubernetes.io/name: ecommerce-ingress
    app.kubernetes.io/part-of: ecommerce-platform
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    # TIÊU CHUẨN SENIOR: target-type ip bắn thẳng từ ALB vào IP riêng của Pod (AWS VPC CNI)
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    # Gắn Khiên bảo vệ AWS WAF v2 Web ACL do Terraform khởi tạo
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-1:000000000000:regional/webacl/ecommerce-prod-waf/619e3858-c45d-4d8d-9cce-58ca3f5bf7f6
    alb.ingress.kubernetes.io/group.name: ecommerce-prod-alb
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-api-service
                port:
                  number: 80
